--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ search:
   rel_url: true
   button: true
 baseurl: "/docs"
-url: "https://wsldl-pg.github.io/docs"
+url: "https://wsldl-pg.github.io"
 aux_links:
   " See GitHub":
     - "//github.com/wsldl-pg/docs"
